# serializer version: 1
# name: test_nutrition_scope_config_entry[scopes0-unit_system0]
  tuple(
    '99',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Water',
      'icon': 'mdi:cup-water',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfVolume.MILLILITERS: 'mL'>,
    }),
  )
# ---
# name: test_nutrition_scope_config_entry[scopes0-unit_system0].1
  tuple(
    '1600',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Calories In',
      'icon': 'mdi:food-apple',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'cal',
    }),
  )
# ---
# name: test_nutrition_scope_config_entry[scopes1-unit_system1]
  tuple(
    '99',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Water',
      'icon': 'mdi:cup-water',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfVolume.FLUID_OUNCES: 'fl. oz.'>,
    }),
  )
# ---
# name: test_nutrition_scope_config_entry[scopes1-unit_system1].1
  tuple(
    '1600',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Calories In',
      'icon': 'mdi:food-apple',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'cal',
    }),
  )
# ---
# name: test_sensors[monitored_resources0-sensor.first_l_activity_calories-activities/activityCalories-135]
  tuple(
    '135',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Activity Calories',
      'icon': 'mdi:fire',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'cal',
    }),
    'fitbit-api-user-id-1_activities/activityCalories',
  )
# ---
# name: test_sensors[monitored_resources1-sensor.first_l_tracker_activity_calories-activities/tracker/activityCalories-135]
  tuple(
    '135',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Tracker Activity Calories',
      'icon': 'mdi:fire',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'cal',
    }),
    'fitbit-api-user-id-1_activities/tracker/activityCalories',
  )
# ---
# name: test_sensors[monitored_resources10-sensor.first_l_minutes_sedentary-activities/minutesSedentary-18]
  tuple(
    '18',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Minutes Sedentary',
      'icon': 'mdi:seat-recline-normal',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_activities/minutesSedentary',
  )
# ---
# name: test_sensors[monitored_resources11-sensor.first_l_minutes_very_active-activities/minutesVeryActive-20]
  tuple(
    '20',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Minutes Very Active',
      'icon': 'mdi:run',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_activities/minutesVeryActive',
  )
# ---
# name: test_sensors[monitored_resources12-sensor.first_l_steps-activities/steps-5600]
  tuple(
    '5600',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Steps',
      'icon': 'mdi:walk',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'steps',
    }),
    'fitbit-api-user-id-1_activities/steps',
  )
# ---
# name: test_sensors[monitored_resources13-sensor.first_l_weight-body/weight-175]
  tuple(
    '175.0',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'weight',
      'friendly_name': 'First L. Weight',
      'icon': 'mdi:human',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfMass.KILOGRAMS: 'kg'>,
    }),
    'fitbit-api-user-id-1_body/weight',
  )
# ---
# name: test_sensors[monitored_resources14-sensor.first_l_body_fat-body/fat-18]
  tuple(
    '18.0',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Body Fat',
      'icon': 'mdi:human',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'fitbit-api-user-id-1_body/fat',
  )
# ---
# name: test_sensors[monitored_resources15-sensor.first_l_bmi-body/bmi-23.7]
  tuple(
    '23.7',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. BMI',
      'icon': 'mdi:human',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'BMI',
    }),
    'fitbit-api-user-id-1_body/bmi',
  )
# ---
# name: test_sensors[monitored_resources16-sensor.first_l_awakenings_count-sleep/awakeningsCount-7]
  tuple(
    '7',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Awakenings Count',
      'icon': 'mdi:sleep',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'times awaken',
    }),
    'fitbit-api-user-id-1_sleep/awakeningsCount',
  )
# ---
# name: test_sensors[monitored_resources17-sensor.first_l_sleep_efficiency-sleep/efficiency-80]
  tuple(
    '80',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Sleep Efficiency',
      'icon': 'mdi:sleep',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'fitbit-api-user-id-1_sleep/efficiency',
  )
# ---
# name: test_sensors[monitored_resources18-sensor.first_l_minutes_after_wakeup-sleep/minutesAfterWakeup-17]
  tuple(
    '17',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Minutes After Wakeup',
      'icon': 'mdi:sleep',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_sleep/minutesAfterWakeup',
  )
# ---
# name: test_sensors[monitored_resources19-sensor.first_l_sleep_minutes_asleep-sleep/minutesAsleep-360]
  tuple(
    '360',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Sleep Minutes Asleep',
      'icon': 'mdi:sleep',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_sleep/minutesAsleep',
  )
# ---
# name: test_sensors[monitored_resources2-sensor.first_l_calories-activities/calories-139]
  tuple(
    '139',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Calories',
      'icon': 'mdi:fire',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'cal',
    }),
    'fitbit-api-user-id-1_activities/calories',
  )
# ---
# name: test_sensors[monitored_resources20-sensor.first_l_sleep_minutes_awake-sleep/minutesAwake-35]
  tuple(
    '35',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Sleep Minutes Awake',
      'icon': 'mdi:sleep',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_sleep/minutesAwake',
  )
# ---
# name: test_sensors[monitored_resources21-sensor.first_l_sleep_minutes_to_fall_asleep-sleep/minutesToFallAsleep-35]
  tuple(
    '35',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Sleep Minutes to Fall Asleep',
      'icon': 'mdi:sleep',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_sleep/minutesToFallAsleep',
  )
# ---
# name: test_sensors[monitored_resources22-sensor.first_l_sleep_start_time-sleep/startTime-2020-01-27T00:17:30.000]
  tuple(
    '2020-01-27T00:17:30.000',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Sleep Start Time',
      'icon': 'mdi:clock',
    }),
    'fitbit-api-user-id-1_sleep/startTime',
  )
# ---
# name: test_sensors[monitored_resources23-sensor.first_l_sleep_time_in_bed-sleep/timeInBed-462]
  tuple(
    '462',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Sleep Time in Bed',
      'icon': 'mdi:hotel',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_sleep/timeInBed',
  )
# ---
# name: test_sensors[monitored_resources3-sensor.first_l_tracker_calories-activities/tracker/calories-139]
  tuple(
    '139',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Tracker Calories',
      'icon': 'mdi:fire',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'cal',
    }),
    'fitbit-api-user-id-1_activities/tracker/calories',
  )
# ---
# name: test_sensors[monitored_resources4-sensor.first_l_distance-activities/distance-12.7]
  tuple(
    '12.70',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'distance',
      'friendly_name': 'First L. Distance',
      'icon': 'mdi:map-marker',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'fitbit-api-user-id-1_activities/distance',
  )
# ---
# name: test_sensors[monitored_resources5-sensor.first_l_elevation-activities/elevation-7600.24]
  tuple(
    '7600.24',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'distance',
      'friendly_name': 'First L. Elevation',
      'icon': 'mdi:walk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfLength.METERS: 'm'>,
    }),
    'fitbit-api-user-id-1_activities/elevation',
  )
# ---
# name: test_sensors[monitored_resources6-sensor.first_l_floors-activities/floors-8]
  tuple(
    '8',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Floors',
      'icon': 'mdi:walk',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'floors',
    }),
    'fitbit-api-user-id-1_activities/floors',
  )
# ---
# name: test_sensors[monitored_resources7-sensor.first_l_resting_heart_rate-activities/heart-api_value7]
  tuple(
    '76',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'friendly_name': 'First L. Resting Heart Rate',
      'icon': 'mdi:heart-pulse',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'bpm',
    }),
    'fitbit-api-user-id-1_activities/heart',
  )
# ---
# name: test_sensors[monitored_resources8-sensor.first_l_minutes_fairly_active-activities/minutesFairlyActive-35]
  tuple(
    '35',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Minutes Fairly Active',
      'icon': 'mdi:walk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_activities/minutesFairlyActive',
  )
# ---
# name: test_sensors[monitored_resources9-sensor.first_l_minutes_lightly_active-activities/minutesLightlyActive-95]
  tuple(
    '95',
    ReadOnlyDict({
      'attribution': 'Data provided by Fitbit.com',
      'device_class': 'duration',
      'friendly_name': 'First L. Minutes Lightly Active',
      'icon': 'mdi:walk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'fitbit-api-user-id-1_activities/minutesLightlyActive',
  )
# ---
